@@ -4,7 +4,7 @@ import java.util.*;
 
 /** 
  * <h3>MersenneTwister and MersenneTwisterFast</h3>
- * <p><b>Version 18</b>, based on version MT199937(99/10/29)
+ * <p><b>Version 19</b>, based on version MT199937(99/10/29)
  * of the Mersenne Twister algorithm found at 
  * <a href="http://www.math.keio.ac.jp/matumoto/emt.html">
  * The Mersenne Twister Home Page</a>, with the initialization
@@ -41,6 +41,9 @@ import java.util.*;
  * Vol. 8, No. 1, January 1998, pp 3--30.
  *
  * <h3>About this Version</h3>
+ *
+ * <p><b>Changes since V18:</b> Removed old final declarations, which used to
+ * potentially speed up the code, but no longer.
  *
  * <p><b>Changes since V17:</b> Removed vestigial references to &= 0xffffffff
  * which stemmed from the original C code.  The C code could not guarantee that
@@ -159,7 +162,7 @@ import java.util.*;
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE 
  * POSSIBILITY OF SUCH DAMAGE.
  *
- @version 18
+ @version 19
 */
 
 
@@ -264,7 +267,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
      * as a long, it's best to make sure it's actually an integer.
      *
      */
-    public MersenneTwisterFast(final long seed)
+    public MersenneTwisterFast(long seed)
         {
         setSeed(seed);
         }
@@ -276,7 +279,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
      * in the array are used; if the array is shorter than this then
      * integers are repeatedly used in a wrap-around fashion.
      */
-    public MersenneTwisterFast(final int[] array)
+    public MersenneTwisterFast(int[] array)
         {
         setSeed(array);
         }
@@ -288,7 +291,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
      * only uses the first 32 bits for its seed).   
      */
 
-    synchronized public void setSeed(final long seed)
+    synchronized public void setSeed(long seed)
         {
         // Due to a bug in java.util.Random clear up to 1.2, we're
         // doing our own Gaussian variable.
@@ -322,7 +325,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
      * integers are repeatedly used in a wrap-around fashion.
      */
 
-    synchronized public void setSeed(final int[] array)
+    synchronized public void setSeed(int[] array)
         {
         if (array.length == 0)
             throw new IllegalArgumentException("Array length must be greater than zero");
@@ -353,7 +356,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
         }
 
 
-    public final int nextInt()
+    public int nextInt()
         {
         int y;
         
@@ -390,7 +393,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
 
 
 
-    public final short nextShort()
+    public short nextShort()
         {
         int y;
         
@@ -427,7 +430,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
 
 
 
-    public final char nextChar()
+    public char nextChar()
         {
         int y;
         
@@ -463,7 +466,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
         }
 
 
-    public final boolean nextBoolean()
+    public boolean nextBoolean()
         {
         int y;
         
@@ -506,7 +509,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
         event as nextBoolean(double), but twice as fast. To explicitly
         use this, remember you may need to cast to float first. */
 
-    public final boolean nextBoolean(final float probability)
+    public boolean nextBoolean(float probability)
         {
         int y;
         
@@ -550,7 +553,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
         of returning true, else returning false.  <tt>probability</tt> must
         be between 0.0 and 1.0, inclusive. */
 
-    public final boolean nextBoolean(final double probability)
+    public boolean nextBoolean(double probability)
         {
         int y;
         int z;
@@ -620,7 +623,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
         }
 
 
-    public final byte nextByte()
+    public byte nextByte()
         {
         int y;
         
@@ -656,7 +659,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
         }
 
 
-    public final void nextBytes(byte[] bytes)
+    public void nextBytes(byte[] bytes)
         {
         int y;
         
@@ -695,7 +698,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
         }
 
 
-    public final long nextLong()
+    public long nextLong()
         {
         int y;
         int z;
@@ -763,7 +766,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
 
     /** Returns a long drawn uniformly from 0 to n-1.  Suffice it to say,
         n must be > 0, or an IllegalArgumentException is raised. */
-    public final long nextLong(final long n)
+    public long nextLong(long n)
         {
         if (n<=0)
             throw new IllegalArgumentException("n must be positive, got: " + n);
@@ -838,7 +841,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
 
     /** Returns a random double in the half-open range from [0.0,1.0).  Thus 0.0 is a valid
         result but 1.0 is not. */
-    public final double nextDouble()
+    public double nextDouble()
         {
         int y;
         int z;
@@ -932,7 +935,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
 
 
 
-    public final double nextGaussian()
+    public double nextGaussian()
         {
         if (__haveNextNextGaussian)
             {
@@ -1082,7 +1085,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
 
     /** Returns a random float in the half-open range from [0.0f,1.0f).  Thus 0.0f is a valid
         result but 1.0f is not. */
-    public final float nextFloat()
+    public float nextFloat()
         {
         int y;
         
@@ -1147,7 +1150,7 @@ public strictfp class MersenneTwisterFast implements Serializable, Cloneable
 
     /** Returns an integer drawn uniformly from 0 to n-1.  Suffice it to say,
         n must be > 0, or an IllegalArgumentException is raised. */
-    public final int nextInt(final int n)
+    public int nextInt(int n)
         {
         if (n<=0)
             throw new IllegalArgumentException("n must be positive, got: " + n);
